Fix token overlap and fix sizing

--- a/src/components/certificates/Certificates.scss
+++ b/src/components/certificates/Certificates.scss
@@ -52,10 +52,6 @@
       width: 150px;
     }
 
-    .response-form ~ .subscription-signup-button {
-      display: none;
-    }
-
     .subscription-signup-button.displayed{
       opacity: 1;
     }
@@ -101,6 +97,9 @@
       min-height: 90vh;
       background-color: white;
       display: flex;
+      @include min-breakpoint(490px){
+        padding-bottom: 100px;
+      }
       @include min-breakpoint(1200px){
         background-color: rgba(0,0,0,0);
         justify-content: center;
